k8s/godbox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: godbox
  namespace: tradistonks
  labels:
    app: godbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: godbox
  template:
    metadata:
      labels:
        app: godbox
    spec:
      containers:
        - image: quantumsheep/godbox:2
          name: godbox
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "0.5"
              memory: 512Mi
            requests:
              cpu: "0.2"
              memory: 256Mi
          securityContext:
            privileged: true
      restartPolicy: Always
