k8s/hydra-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra
  namespace: tradistonks
  labels:
    app: hydra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hydra
  template:
    metadata:
      labels:
        app: hydra
    spec:
      containers:
        - args:
            - serve
            - all
            - --dangerous-force-http
          image: oryd/hydra:v1.10.2
          name: hydra
          ports:
            - containerPort: 4444
            - containerPort: 4445
          resources: {}
      imagePullSecrets:
        - name: docker-registry-secret
      restartPolicy: Always
status: {}
