k8s/hydra-migrate-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hydra-migrate
  namespace: tradistonks
  labels:
    app: hydra-migrate
spec:
  containers:
    - args:
        - migrate
        - sql
        - --yes
        - -e
      image: oryd/hydra:v1.10.2
      name: hydra-migrate
      resources: {}
  restartPolicy: OnFailure
status: {}
