k8s/godbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: godbox
  namespace: tradistonks
  labels:
    app: godbox
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: godbox
status:
  loadBalancer: {}
