k8s/hydra-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra
  namespace: tradistonks
  labels:
    app: hydra
spec:
  ports:
    - name: "4444"
      port: 4444
      targetPort: 4444
    - name: "4445"
      port: 4445
      targetPort: 4445
  selector:
    app: hydra
status:
  loadBalancer: {}
