k8s/tradistonks-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tradistonks-api
  namespace: tradistonks
  labels:
    app: tradistonks-api
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: tradistonks-api
status:
  loadBalancer: {}
