k8s/tradistonks-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tradistonks-client
  namespace: tradistonks
  labels:
    app: tradistonks-client
spec:
  ports:
    - name: "3080"
      port: 3080
      targetPort: 3000
  selector:
    app: tradistonks-client
status:
  loadBalancer: {}
