k8s/tradistonks-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tradistonks-api
  namespace: tradistonks
  labels:
    app: tradistonks-api
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: api.tradistonks.qtmsheep.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tradistonks-api
                port:
                  number: 3000
